# navground_narrow

./: package.xml  setup.cfg  setup.py
docs/: README.md  conf.py  index.rst
examples/: narrow_corridor.yaml  narrow_passage.yaml
navground_narrow/: utils.py
navground_narrow/modulations/: __init__.py  follow_leader.py  narrow_corridor.py
navground_narrow/scenarios/: __init__.py  corridor_with_narrow_passage.py
