[develop]
script_dir=$base/lib/navground_narrow
[install]
install_scripts=$base/lib/navground_narrow
[options.entry_points]
navground_scenarios = 
    corridor_with_narrow_passage = navground_narrow.scenarios:CorridorWithNarrowPassageScenario
navground_modulations = 
    follow_leader = navground_narrow.modulations:FollowLeaderModulation
    narrow = navground_narrow.modulations:NarrowModulation
